# reeve

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DECISIONS-MADE.md  README.md  REPORT.md  compose.dev.yml  compose.yml  justfile
.cargo/: config.toml
crates/desired-state/: Cargo.toml
crates/desired-state/src/: emit.rs  error.rs  lib.rs  merge.rs  render.rs
crates/desired-state/tests/: render.rs
crates/device-api/src/: lib.rs  status.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: chaos.rs  conformance.rs  core_loop.rs  deploy_logs.rs  epoch_restore.rs  fleet_ops.rs  rotation.rs
crates/margo-package/src/: error.rs  lib.rs  package.rs  source.rs  validate.rs
crates/margo-package/tests/: real_fixtures.rs
crates/reeve-agent/: Cargo.toml  build.rs
crates/reeve-agent/src/: completions.rs  converge.rs  lib.rs  main.rs  provider.rs  report.rs  specdocs.rs  state.rs  update.rs
crates/reeve-agent/src/ext/: logs.rs  mod.rs  secrets.rs  terminal.rs
crates/reeve-agent/tests/: cli.rs
crates/reeve-server/: Cargo.toml  build.rs
crates/reeve-server/src/: assets.rs  completions.rs  config.rs  db.rs  delivery.rs  ingest.rs  init.rs  lib.rs  main.rs  openapi.rs  ownership.rs  presence.rs  render.rs  router.rs  specdocs.rs  state.rs  tree.rs  zot_proxy.rs
crates/reeve-server/src/ext/: federation.rs  install.rs  logs.rs  mod.rs
crates/reeve-server/src/migrations/: V12__deploy_logs.sql  V3__render.sql  V4__status.sql  V9__federation.sql
crates/reeve-server/tests/: auth_flow.rs  delivery_flow.rs  enroll_flow.rs  federation_flow.rs  fleet_ops_flow.rs  groups_flow.rs  logs_flow.rs  packaging_flow.rs  rollout_flow.rs  secrets_flow.rs  status_flow.rs  tree_api.rs  zot_proxy_flow.rs
crates/reeve-server/tests/common/: mod.rs
crates/reeve-types/src/: lib.rs
crates/reeve-types/src/margo/: application.rs  capabilities.rs  deployment.rs  mod.rs  status.rs
crates/reeve-types/src/reeve/: capabilities.rs  events.rs  health.rs  logs.rs  manifest.rs  mod.rs  secrets.rs
crates/reeve-types/tests/: reeve_extensions.rs  roundtrip.rs
crates/revision-store/: Cargo.toml
crates/revision-store/src/: lib.rs
crates/revision-store/tests/: chaos.rs  store.rs
deploy/: compose.yml
deploy/ci/: build-matrix.yml
docker/: Dockerfile.agent  Dockerfile.server
docs/decisions/: 00-INDEX.md  agent.md  auth.md  authoring.md  delivery.md  deploy.md  secrets.md  storage.md  tree-render.md  ui.md
scripts/: dev-up.sh  split-docs
spec/reeve/: 00-INDEX.md  01-framework.md  02-channel.md  03-terminal.md  04-status-stream.md  05-health-journal.md  06-federation.md  07-durability.md  08-packaging.md  09-rollouts.md  10-secrets.md  11-fleet-model.md  DECISIONS.md  README.md  SPEC.md
ui/: openapi.json
ui/src/: route-tree.gen.ts
ui/src/api/model/: deploy-log-content.ts  deploy-log-list.ts  deploy-log-meta.ts  deploy-log-outcome.ts  deploy-log-phase.ts  deploy-log-upload.ts  index.ts  list-deploy-logs-params.ts  log-id-response.ts
ui/src/components/: app-header.tsx  app-sidebar.tsx  confirm-button.tsx  deploy-logs-dialog.tsx  secret-form.tsx
ui/src/lib/: sse.ts
ui/src/routes/: _app.tsx
ui/src/routes/_app/deploy/: index.tsx
ui/src/routes/_app/devices/$device-id/: index.tsx
ui/src/routes/_app/enrollment/: new.tsx
ui/src/routes/_app/fleet/: index.tsx
ui/src/routes/_app/ops/tier-tokens/: new.tsx
ui/src/routes/_app/rollouts/: new.tsx
