[workspace]
resolver = "3"
members = [
    "crates/reeve-server",
    "crates/reeve-agent",
    "crates/reeve-types",
    "crates/margo-package",
    "crates/desired-state",
    "crates/revision-store",
    "crates/device-api",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rusqlite = { version = "0.40", features = ["bundled", "session"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Durability tier target (spec/reeve/07-durability.md §9.2): one crate,
# S3-compatible + local filesystem (test/air-gap) targets.
object_store = { version = "0.12", features = ["aws"] }
# C12 packaging (spec/reeve/08-packaging.md §10.1): both binaries embed
# spec/reeve/ for --spec; reeve-server additionally embeds ui/dist.
# include-exclude: filter the embed to *.md / real assets.
rust-embed = { version = "8", features = ["include-exclude"] }
