[package]
name = "reeve-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Extension boundary (docs/build-charter.md CODE BOUNDARY): reeve
# extensions are whole modules under src/ext/, one cargo feature per
# extension, all default-ON. Core (poll, pull, converge, compose
# provider, status) never depends on ext items — the
# --no-default-features build is the compiler-enforced proof.
default = ["ext-secrets", "ext-channel", "ext-terminal", "ext-health", "ext-logs"]
# REV-009 secrets: resolve-endpoint fetch + per-service env
# materialization (spec/reeve/10-secrets.md §12.3).
ext-secrets = []
# REV-001 persistent agent channel: outbound websocket for presence,
# nudges, and multiplexed sub-channels (spec/reeve/02-channel.md §4).
# ext-terminal (REV-002, B6) MUST depend on this feature — the
# terminal is a sub-channel consumer, never its own socket (§4.2).
ext-channel = ["dep:tokio-tungstenite", "dep:futures-util"]
# REV-002 remote terminal: PTY sessions over a rev-002/terminal
# sub-channel, enabled ONLY via desired state
# (spec/reeve/03-terminal.md §5). Depends on ext-channel per the
# extension feature graph.
ext-terminal = ["ext-channel", "dep:portable-pty"]
# REV-004 health sampler + status journal backfill (B7,
# spec/reeve/05-health-journal.md §7). httpdate: parse the server
# Date header for opportunistic clock-skew measurement (§7.2). libc
# (statvfs, §7.2) became an unconditional dependency with B8 — the
# core installer needs geteuid; see [dependencies].
ext-health = ["dep:httpdate"]
# REV-011 deploy logs: capture combined `docker compose up`/`down`
# output and upload it to POST /api/reeve/v1/devices/{id}/logs
# (spec/reeve/01-framework.md §3.1; the reeve-server ext-logs seam).
# No new deps — reqwest (upload) and reeve-types (wire body) are
# already core deps. Whole module: src/ext/logs.rs.
ext-logs = []

[dependencies]
reeve-types = { path = "../reeve-types" }
serde = { workspace = true }
# B3 converge: parse rendered compose.yml (service names -> env-file
# materialization) and deployment.yaml (the status contract, D2).
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
toml = "0.8"
sha2 = "0.10"
# "json" for the enroll call (C2, docs/decisions/agent.md D4 step 1).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# B2 bundle pull: unpack application/vnd.reeve.render-bundle.v1+tar+gzip
# (spec/reeve/08-packaging.md §10.2). Pure-Rust backend (musl-friendly,
# CLAUDE.md single-static-binary goal).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
# B5 channel (ext-channel only): outbound websocket client, rustls
# like reqwest above (musl-friendly, no openssl).
# 0.29 = the exact version axum 0.8's ws feature uses (one copy in
# the tree; the dev-dep mock server and this client stay in lockstep).
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
# B6 terminal (ext-terminal only): portable PTY open/spawn/resize
# (spec/reeve/03-terminal.md §5.1/§5.3). Pinned exact per the build
# charter's version-pinning rule.
portable-pty = { version = "=0.9.0", optional = true }
# B7 health sampler: statvfs disk usage (§7.2). B8 installer: the
# `reeve-agent install` root check (geteuid). Unconditional since B8
# because the installer is core (spec/reeve/08-packaging.md §10.3).
# Pinned exact per the build charter's version-pinning rule (matches
# the workspace lockfile's existing copy).
libc = { version = "=0.2.186" }
# B7 clock skew (ext-health only): RFC 7231 Date header parsing.
httpdate = { version = "=1.0.3", optional = true }
# C12 packaging (spec/reeve/08-packaging.md §10.1): the binary embeds
# spec/reeve/ for --spec — the deployed artifact carries its own
# contract.
rust-embed = { workspace = true }

[dev-dependencies]
# "ws" for the mock channel server in ext::channel tests (B5);
# "test-util" for paused-clock nudge/backoff timing tests.
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
# B8: validate the shipped example self-update package
# (deploy/packages/reeve-agent/) against the same parser the server
# uses (spec/reeve/08-packaging.md §10.5: "an ApplicationDescription
# valid per margo-package").
margo-package = { path = "../margo-package" }
