[package]
name = "reeve-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reeve-types = { path = "../reeve-types" }
margo-package = { path = "../margo-package" }
desired-state = { path = "../desired-state" }
revision-store = { path = "../revision-store" }
device-api = { path = "../device-api" }
axum = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Version-pinned locally per build rules.
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3"
base64 = "0.22"
tempfile = "3"
# C4 render pipeline: pack render bundles as deterministic tar.gz
# (application/vnd.reeve.render-bundle.v1+tar+gzip, spec/reeve/
# 08-packaging.md §10.2). Pure-Rust backend (musl-friendly, CLAUDE.md
# single-static-binary goal) — mirrors reeve-agent's pin.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
