[package]
name = "reeve-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Extension boundary (docs/build-charter.md CODE BOUNDARY): whole
# modules behind cargo features, default ON; core never depends on ext
# items. ext-durability-changeset gates ONLY the seconds-RPO changeset
# CAPTURE tier (spec/reeve/07-durability.md §9.3) — the snapshot tier,
# restore, replay and verify-restore are CORE (§9.2/§9.4/§9.5), so a
# --no-default-features binary can still restore targets written by a
# changeset-enabled one.
default = [
    "ext-durability-changeset",
    "ext-secrets",
    "ext-channel",
    "ext-terminal",
    "ext-sse",
    "ext-rollouts",
    "ext-federation",
    "ext-logs",
]
ext-durability-changeset = []
# REV-011 deploy-log storage (server-side): capture per-deployment
# `docker compose up`/`down` output and store it content-addressed so
# operators can see WHY a deployment failed beyond the one-line Margo
# `status.error`. Whole module (src/ext/logs.rs) behind this feature;
# the LogStore trait is the seam a future LokiLogStore satisfies
# without touching callers. Core (--no-default-features) never links it
# and advertises no rev-011; the V12 tables exist regardless (schema is
# stable across feature sets, like V6/V7 — a core binary can still
# restore a target written by a full one).
ext-logs = []
# REV-009 secrets vault (spec/reeve/10-secrets.md, C7): AEAD-encrypted
# secrets table under the D15 keyfile, device resolve endpoint,
# operator write-only API, and the render-time per-app secrets_version
# hook. Core (--no-default-features) still builds and serves manifests
# with `secretsVersion` absent.
ext-secrets = []
# REV-001 persistent agent channel, server side (spec/reeve/
# 02-channel.md, C8): websocket endpoint at /api/reeve/v1/channel,
# presence-as-fact, best-effort nudges, sub-channel mux. Core builds
# keep recency-based presence and no push path.
ext-channel = ["axum/ws"]
# REV-002 remote terminal bridge (spec/reeve/03-terminal.md, C8):
# operator websocket leg + byte relay over a rev-002/terminal
# sub-channel. Rides the channel (the feature graph declares it —
# docs/build-charter.md CODE BOUNDARY "an extension MAY depend on
# another (terminal on channel)").
ext-terminal = ["ext-channel", "dep:futures-util"]
# REV-003 live status stream (spec/reeve/04-status-stream.md, C8):
# GET /api/reeve/v1/events SSE endpoint over the in-process event hub.
ext-sse = ["dep:futures-util"]
# REV-005 federation (spec/reeve/06-federation.md, C10): tier tokens +
# parent-side sync serving, the gateway sync loop (revisions + scoped
# secrets down, status forwarding up), and the §8.5 air-gap export/
# import CLI. The V9 tables and the two-stream render are CORE (a
# --no-default-features binary enforces §8.4 ownership and renders an
# existing upstream stream); this feature gates the moving parts.
ext-federation = ["dep:reqwest", "dep:ed25519-dalek", "dep:x25519-dalek"]
# REV-008 staged rollouts (spec/reeve/09-rollouts.md, C9): WFM-internal
# manifest-advancement engine + operator API. No agent-facing wire
# surface, so no capability advertisement. The V8 tables (including the
# core-honored device_render_targets holds) exist regardless of this
# feature.
ext-rollouts = []
# REV-007 §10.4 /install bootstrap (C12): embeds reeve-agent binaries
# for both arches (build.rs, REEVE_AGENT_BINARIES) and serves them as
# OCI artifacts on /v2 plus the GET /install shell script. Default OFF
# — deliberately NOT in the default set (DECISIONS-MADE.md C12): the
# feature is meaningless without cross-built agent binaries handed to
# build.rs, and a default-on empty embed would ship an /install that
# can serve no architecture. Release builds turn it on (deploy/ci/
# build-matrix.yml). Without the feature the route is absent — 404,
# invisible per 01-framework §3.1 rule 4.
embedded-agents = []

[dependencies]
# openapi: ToSchema on the wire types — the D10 pipeline registers
# them (SSE payloads included) as OpenAPI components (openapi.rs).
reeve-types = { path = "../reeve-types", features = ["openapi"] }
margo-package = { path = "../margo-package" }
desired-state = { path = "../desired-state" }
revision-store = { path = "../revision-store" }
device-api = { path = "../device-api" }
axum = { workspace = true }
# "hooks" on top of the workspace pin: the changeset tier counts writer
# commits via commit_hook (spec/reeve/07-durability.md §9.3 "every N
# seconds or M commits"). Additive feature, harmless when unused.
rusqlite = { workspace = true, features = ["hooks"] }
serde = { workspace = true }
serde_json = { workspace = true }
# D10 API type pipeline (docs/decisions/ui.md): every route annotated,
# doc assembled in openapi.rs, printed by `reeve-server openapi`.
utoipa = { workspace = true }
# C7 ext-secrets: parse rendered deployment.yaml to collect
# `${secret:<name>}` parameter references (same parser family as
# reeve-agent's B4 ext/secrets.rs). Already in-tree via reeve-types.
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Version-pinned locally per build rules.
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3"
base64 = "0.22"
tempfile = "3"
# C4 render pipeline: pack render bundles as deterministic tar.gz
# (application/vnd.reeve.render-bundle.v1+tar+gzip, spec/reeve/
# 08-packaging.md §10.2). Pure-Rust backend (musl-friendly, CLAUDE.md
# single-static-binary goal) — mirrors reeve-agent's pin.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
# C6 durability (spec/reeve/07-durability.md): object-store shipping,
# pure-Rust AEAD under the D15 keyfile, timestamped generation ids.
object_store = { workspace = true }
url = "2"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# C8 ext-terminal / ext-sse: stream combinators (WebSocket split for
# the byte bridge's two pump tasks; unfold/chain for the SSE stream).
# Same pin family as reeve-agent's.
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
# C11 zot /v2 reverse proxy (docs/decisions/delivery.md D8): the boring
# hyper-util legacy client — same hyper family axum pins, plain http
# (co-located sidecar, no TLS stack), streams blob bodies through
# without buffering. Empty<Bytes> outgoing bodies via http-body-util.
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
# C12 packaging (spec/reeve/08-packaging.md §10.1): embedded spec/reeve/
# (--spec), embedded ui/dist with SPA fallback (assets.rs).
rust-embed = { workspace = true }
# C10 ext-federation: the upstream sync client (§8.2 pull-based),
# rustls like reeve-agent's pin (musl-friendly, no openssl).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
# C10 ext-federation air-gap signing (§8.5): tier identities are
# ed25519 keypairs minted at first use — pinned per the build brief.
ed25519-dalek = { version = "2", optional = true }
# C10 ext-federation sealed box (10-secrets §12.5): X25519 ECIES with
# the existing XChaCha20-Poly1305 envelope (see ext/federation.rs
# module docs for the recorded construction).
x25519-dalek = { version = "2", features = ["static_secrets"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# C8 tests: fake reeve-agent / operator websocket clients against the
# real listener. 0.29 = the exact version axum 0.8's ws feature uses
# (one tungstenite copy in the tree) — mirrors reeve-agent's pin.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
